--- a/_posts/2012-05-22-blog111.md
+++ b/_posts/2012-05-22-blog111.md
@@ -1,6 +1,6 @@
 ---
-layout: post
-title: "Testing Readability with a Bunch of Text"
+layout: post/blog
+title: "blog111"
 date: 2012-05-22
 excerpt: "A ton of text to test readability."
 tags: [sample post, readability, test]
